<?xml version="1.0"?>
<package format="2">
  <name>jetson-ros-vision</name>
  <version>0.0.0</version>
  <description>Computer Vision nodes for ROS on NVIDIA Jetson and TensorRT and Cuda</description>
  <maintainer email="andrew.presland@gmail.com">Andrew Presland</maintainer>
  <license>Open</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>